# vanta

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml  todo.md
.github/workflows/: docker.yml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: BulkTag.tsx  Gallery.tsx  HammerZoom.tsx  Header.tsx  InfoModal.tsx  Lightbox.tsx  RenameTagModal.tsx  TagModal.tsx  UploadModal.tsx
frontend/src/components/ui/: Button.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  Suggestions.tsx  TagChip.tsx
frontend/src/lib/: store.ts  utils.ts
frontend/src/pages/: Reels.tsx  Setup.tsx  Unlock.tsx  Vault.tsx
public/: app.js  style.css
src/: api.rs  app_state.rs  image_processor.rs  main.rs  router.rs  templates.rs  vault.rs
src/vault/: crypto.rs  db.rs  error.rs  mod.rs  types.rs
templates/: app.tera  base.tera  setup.tera  unlock.tera
