[package]
name = "vanta"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
chacha20poly1305 = "0.10.1"
fast_image_resize = { version = "6.0.0", features = ["image", "rayon"] }
image = { version = "0.25.9", features = ["nasm"] }
jxl-oxide = { version = "0.12.5", features = ["image"] }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.0"
rayon = "1.11.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.15.0"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
webp-animation = "0.9.0"
zip = "7.4.0"
